// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.reporting.v2;

import "wfa/measurement/internal/reporting/v2/page.proto";
import "wfa/measurement/internal/reporting/v2/reporting_impression_qualification_filter.proto";
import "wfa/measurement/internal/reporting/v2/reporting_interval.proto";

option java_package = "org.wfanet.measurement.internal.reporting.v2";
option java_multiple_files = true;

message BasicReportDetails {
  // Human readable title of the report.
  string title = 1;

  // This is the external ID of a primitive ReportingSet that includes all of
  // the EventGroups that may be reported on.
  //
  // EventGroups may span DataProviders and MediaTypes.
  string external_campaign_group_id = 3;

  // The interval of time that the BasicReport spans
  //
  // Both the start and the end of the interval are immutable.
  ReportingInterval reporting_interval = 4;

  // The impression qualification filters for the BasicReport.
  //
  // The custom criteria and any specific impression_qualification_filter may
  // each be used at most once.
  repeated ReportingImpressionQualificationFilter
      impression_qualification_filters = 5;

  // The report results
  repeated Page pages = 6;
}
